--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       padding: 60px 20px;
       background: linear-gradient(to right, #1E3A8A, #2563EB);
     }
+    .hero img {
+      max-width: 150px;
+      margin-bottom: 20px;
+    }
     .hero h2 {
       font-size: 2.5rem;
       margin-bottom: 10px;
@@ -106,7 +110,8 @@
   </nav>
 
   <section class="hero">
-    <h2>Precision. Excellence. Representation.</h2>
+    <img src="logo.png" alt="Niatorious Anesthesia Logo" />
+    <h2>Passionate. Vigilant. Dedicated.</h2>
     <p>Providing elite anesthesiology staffing solutions for hospitals, clinics, and surgical centers.</p>
   </section>
 
